2004-01-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* smtp.tcl: Added support for the STARTTLS extension (RFC 3207).
	This may also support old versions that report a TLS option in
	reply to EHLO, but these are not tested.

2003-11-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* mime.tcl (word_decode): Fixed [SF Tcllib Bug 764702], accepted
	  the patch coming with the bugreport (both by Reinhard Speyerer
	  <rspsf@users.sourceforge.net>). Command is now able to decode
	  data in encoded utf-8.

	* mime.test: Added test for the bug above.

2003-11-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* smtp.tcl (smtp::hear): Integrated fix for [Bug 836442]. Limiting
	  seconds to 600 to prevent integer wraparound when setting up a
	  timer event. Bug reported (and fix provided) by Andreas Otto,
	  and accepted by Marshall Rose.

2003-06-25  David N. Welton  <davidw@dedasys.com>

	* mime.tcl (::mime::parsedatetime): Use string map instead of
	regsub - it's faster.

	* mime.test: Added tests which operate on the bad files below.

	* badmail2.txt: Added second piece of mail for testing.  If they
	turn out to be redundant, we can erase one.

	* badmail1.txt: Added mail for testing that triggers bug 631314.

2003-06-06  Andreas Kupries  <andreask@activestate.com>

	* mime.tcl (::mime::word_decode): Accept lower-case encoding
	  specifiers. [Bug 732512]. Reported by Matthew Walker
	  <gunzel@users.sourceforge.net>, plus patch. Patch accepted by
	  Marshall Rose.

	* mime.test: Two more tests checking the acceptance of lower-case
	  encoding specifiers.

	* mime.tcl (::mime::parsepart): Reactivated error command, revert
	  to error on malformed mime input, instead of infinite
	  looping. [Bug 631314] reported by David Welton.

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-05-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
